---
title: edu.nust.game.scenes.levelscene.gameobjects.player
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class Player
  class Health
  class Character
  class Facing <<enumeration>>
  class CharacterAnimAssets <<enumeration>>
Character <|-- Player : extends
Player --> Facing : uses
Player --> Health : uses